# template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  lefthook.yml  package.json  pnpm-lock.yaml  urrust.toml
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.husky/: pre-commit
examples/: hello_world.rs
scripts/: bump.ts  init.ts  release.ts  syncVersion.ts
src/: lib.rs  main.rs
templates/: Cargo.toml
tests/: integration_test.rs
