[package]
name = "package-name"
version = "1.0.0"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A template for a new Rust project"
documentation = "https://docs.rs/package-name"
readme = "README.md"
homepage = "https://un-rust.github.io/package-name"
repository = "https://github.com/un-rust/package-name"
license = "Apache-2.0"
keywords = []
categories = []

[[bin]]
name = "packageName"
path = "src/main.rs"

[dependencies]
