[package]
name = "$name$"
version = "1.0.0"
authors = [ "YONGQI <betterhyq@qq.com>" ]
edition = "2024"
description = "$description$"
documentation = "https://docs.rs/template"
readme = "README.md"
homepage = "$repository$"
repository = "$repository$"
license = "$license$"
keywords = [ ]
categories = [ "development-tools" ]

[dependencies]
urlogger = "1.0.0"
